# toktik-backend

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml
src/: database.py  db_services.py  main.py  models.py  schemas.py  socket.py
src/routers/: processing.py  s3.py  users.py  videos.py
